Weather API added

--- a/WeatherLive.API/appsettings.json
+++ b/WeatherLive.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OpenWeatherMap": {
+    "ApiKey": "615785d05a34d0f79f73453027907c06"
+  }
 }
