--- a/WeatherLive.Client/appsettings.json
+++ b/WeatherLive.Client/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebApi": {
+    "BaseUrl": "https://localhost:7122"
+  }
 }
